[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryusync"
version = "1.0.0"
description = "RyuSync — macOS drag-and-drop organizer for Nintendo Switch game files."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "PySide6>=6.8,<7.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.27.0",
    "pyinstaller>=6.0",
]

[project.scripts]
ryusync = "ryusync.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ty.environment]
extra-paths = ["src"]

[tool.ty.rules]
unresolved-attribute = "ignore"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.15.0",
    "ty>=0.0.20",
]
